@@ -40,6 +40,8 @@
  ****************************************************************************/
 
 #include <nuttx/config.h>
+
+#include <nuttx/binfmt/builtin.h>
 #include <apps/apps.h>
 
 /****************************************************************************
