@@ -1,0 +1,19 @@
+#
+# For a description of the syntax of this configuration file,
+# see misc/tools/kconfig-language.txt.
+#
+
+config FS_BINFS
+	bool "BINFS File System"
+	default n
+	depends on BUILTIN
+	---help---
+		The BINFS file system is provides access to builtin applications through
+		the NuttX file system.  The BINFS may, for example, be mount at /bin.
+		Then all of the built-in applications will appear as executable files in
+		/bin.  Then, for example, you list them from NSH like:
+
+		nsh> ls -l /bin
+
+		If the BINFS BINFMT loader is also enabled, then the builtin applications
+		can be executed through the normal mechanisms (posix_spawn(), exev(), etc.)
