@@ -1,7 +1,7 @@
 ############################################################################
-# Make.defs
+# fs/binfs/Make.defs
 #
-#   Copyright (C) 2008, 2011, 2013 Gregory Nutt. All rights reserved.
+#   Copyright (C) 2013 Gregory Nutt. All rights reserved.
 #   Author: Gregory Nutt <gnutt@nuttx.org>
 #
 # Redistribution and use in source and binary forms, with or without
@@ -33,21 +33,16 @@
 #
 ############################################################################
 
-ifeq ($(CONFIG_FS_FAT),y)
-# Files required for FAT file system support
+ifeq ($(CONFIG_FS_BINFS),y)
+# Files required for BINFS file system support
 
 ASRCS +=
-CSRCS += fs_fat32.c fs_fat32dirent.c fs_fat32attrib.c fs_fat32util.c
+CSRCS += fs_binfs.c
 
-# Files required for mkfatfs utility function
+# Include BINFS build support
 
-ASRCS +=
-CSRCS += fs_mkfatfs.c fs_configfat.c fs_writefat.c
-
-# Include FAT build support
-
-DEPPATH += --dep-path fat
-VPATH += :fat
-CFLAGS += ${shell $(INCDIR) $(INCDIROPT) "$(CC)" $(TOPDIR)$(DELIM)fs$(DELIM)fat}
+DEPPATH += --dep-path binfs
+VPATH += :binfs
+CFLAGS += ${shell $(INCDIR) $(INCDIROPT) "$(CC)" $(TOPDIR)$(DELIM)fs$(DELIM)binfs}
 
 endif
