@@ -1,7 +1,7 @@
 ############################################################################
 # fs/mmap/Make.defs
 #
-#   Copyright (C) 2011 Gregory Nutt. All rights reserved.
+#   Copyright (C) 2011, 2013 Gregory Nutt. All rights reserved.
 #   Author: Gregory Nutt <gnutt@nuttx.org>
 #
 # Redistribution and use in source and binary forms, with or without
@@ -40,4 +40,9 @@ ifeq ($(CONFIG_FS_RAMMAP),y)
 CSRCS += fs_munmap.c fs_rammap.c
 endif
 
-MMAPDEPPATH = --dep-path mmap
+# Include MMAP build support
+
+DEPPATH += --dep-path mmap
+VPATH += :mmap
+CFLAGS += ${shell $(INCDIR) $(INCDIROPT) "$(CC)" $(TOPDIR)$(DELIM)fs$(DELIM)mmap}
+
