@@ -1,7 +1,7 @@
 ############################################################################
 # Make.defs
 #
-#   Copyright (C) 2012 Gregory Nutt. All rights reserved.
+#   Copyright (C) 2012-2013 Gregory Nutt. All rights reserved.
 #   Author: Gregory Nutt <gnutt@nuttx.org>
 #
 # Redistribution and use in source and binary forms, with or without
@@ -44,7 +44,10 @@ CSRCS +=
 ASRCS +=
 CSRCS += rpc_clnt.c nfs_util.c nfs_vfsops.c
 
-# Argument for dependency checking
+# Include NFS build support
 
-NFSDEPPATH = --dep-path nfs
+DEPPATH += --dep-path nfs
+VPATH += :nfs
+CFLAGS += ${shell $(INCDIR) $(INCDIROPT) "$(CC)" $(TOPDIR)$(DELIM)fs$(DELIM)nfs}
+
 endif
