@@ -1,7 +1,7 @@
 ############################################################################
 # fs/nxffs/Make.defs
 #
-#   Copyright (C) 2011 Gregory Nutt. All rights reserved.
+#   Copyright (C) 2011, 2013 Gregory Nutt. All rights reserved.
 #   Author: Gregory Nutt <gnutt@nuttx.org>
 #
 # Redistribution and use in source and binary forms, with or without
@@ -40,7 +40,10 @@ CSRCS += nxffs_block.c nxffs_blockstats.c nxffs_cache.c nxffs_dirent.c \
 		 nxffs_open.c nxffs_pack.c nxffs_read.c nxffs_reformat.c \
 		 nxffs_stat.c nxffs_unlink.c nxffs_util.c nxffs_write.c
 
-# Argument for dependency checking
+# Include NXFFS build support
 
-NXFFSDEPPATH = --dep-path nxffs
+DEPPATH += --dep-path nxffs
+VPATH += :nxffs
+CFLAGS += ${shell $(INCDIR) $(INCDIROPT) "$(CC)" $(TOPDIR)$(DELIM)fs$(DELIM)nxffs}
+
 endif
